New Armstrong Atmosphere; more science defs
* Armstrong's atmosphere has been updated to be marginally more scientifically plausible in some respects. Its also a uniform temperature across longitudes because it wasnt behaving. It should slow stuff down more in the upper atmosphere but less lower down, now. Somehow the atmosphere height is reduced, from 47km down to 33km.
* Science definitions for Tobalk-Turtlestar system by Snails
* Science definitions for Bifrost, Bil, Ljos, by Sabine.
* Fix for Garner Biome Map.
* Reduce space altitude threshold on Armstrong from 1600km to 475km.
* Make sigma loading screens like. work. lol.

--- a/GameData/PJ2/Career/ScienceBalancing.cfg
+++ b/GameData/PJ2/Career/ScienceBalancing.cfg
@@ -48,7 +48,7 @@
 				inSpaceHighDataValue = 1.5
 				recoveryValue = 1
 				flyingAltitudeThreshold = 23500
-				spaceAltitudeThreshold = 1600000
+				spaceAltitudeThreshold = 475000
 			}
 		}
 	}
