--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Bifrost.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Bifrost.cfg
@@ -43,7 +43,7 @@
 			{
 				InSpaceHigh = Unexpectedly, the thermometer begins to pick up on external heat, even when shaded from all stars. The accumulated damage to the instrument doesn't seem to account for the discrepancy. This calls for further investigation.
 				InSpaceHigh = Temperatures here are noticeably higher than they should be when starlight and planetshine are accounted for. The instrument seems to be showing signs of damage, but it's working well enough to suggest these readings are real.
-				InSpaceLow = From up close to the planet, the anomalous behavior has mostly stopped. Some radiant heat from the moons exists, but it's insignificant at such a distance.
+				InSpaceLow = From up close to the planet, the anomalous behavior has mostly stopped. Some radiant heat from the moons exists, but it's insignificant at such a distance and can't account for the earlier reading.
 				InSpaceLow = The extra heat seems to be gone now - it must not have originated from the planet's surface.
 			}
 		}
@@ -58,8 +58,7 @@
 			name = Bifröst
 			Values
 			{
-				InSpaceHigh = The goo gains an iridescent sheen. It then catches fire, before shattering. Eventually it returns to normal, and the process repeats.
-				InSpaceLow = The container doors refuse to open at first. They seemed to have suffered damage of some sort as a result of the goo's actions - but it is simply sitting there, unmoving.
+				InSpaceHigh = You've come to be familiar with the mystery goo's ability to endure vacuum. As a result, the goo's rapidly deteriorating health and seemingly reduced ability to adapt to the local environment comes as a surprise. Hopefully it didn't die before the damaged motors could reseal the environment.
 			}
 		}
 	}
@@ -75,7 +74,7 @@
 			{
 				InSpaceHigh = The instrument reads zer- wait that can't be right. How is there air pressure here? It's not much but it is most definitely there.
 				InSpaceHigh = The barometer appears to be malfunctioning. A diagnostic shows that it is, but the data is correct: there are millipascal-level ambient pressures here. How could that be?
-				InSpaceLow = While it remains damaged, readings have returned to the expected values of zero now. Curious.
+				InSpaceLow = While it remains damaged, barometer readings have returned to zero now. Curious.
 				InSpaceLow = Readings back to vacuum. It's as if the anomalous pressure never existed.
 			}
 		}
@@ -90,7 +89,7 @@
 			name = Bifröst
 			Values
 			{
-				InSpaceHigh = While the expensive and delicate equipment is degrading at an alarming rate, it remains capable of logging the complex interactions of the system.
+				InSpaceHigh = While the expensive and delicate equipment is degrading at an alarming rate, it remains capable of logging the gravitational environment of the system.
 				InSpaceHigh = The complex gravitational interactions between the enormous spinning mass below, the enormous burning mass in the distance, and all these moons make some very fun squiggles on the readouts.
 				InSpaceLow = High-resolution gravitational data seems to suggest that Bifröst has a very small core, at least considering its enormous mass. It's almost entirely metallic hydrogen, all spinning at terrifying speeds.
 			}
@@ -106,7 +105,7 @@
 			name = Bifröst
 			Values
 			{
-				InSpaceHigh = After failing to respond a few times, the doors finally open. Samples immediately start brightly glowing, and some react as though they've had a large electric current passed through them. Surely that's not a good sign.
+				InSpaceHigh = After failing to respond a few times, the doors finally open. Samples immediately start brightly glowing, and some react as though they've had an electric current passed through them. Surely that's not a good sign.
 				InSpaceHigh = The high radiation environment caused a few of the samples to glow. A lot. A really quite alarming amount, really. Perhaps it is best not to think about this too much.
 				InSpaceLow = The environment near the planet doesn't seem to cause as extreme of a reaction in the materials bay as that further out.
 				InSpaceLow = Some samples float out of the bay, as you realize you subconciously left the vehicle spinning to track the planet below. Oops.
@@ -123,8 +122,8 @@
 			name = Bifröst
 			Values
 			{
-				InSpaceHigh = Magnetic field readings are off the charts! The field lines appear confined into a flat disk, as though by a sheet of highly energized plasma. Befuddled, the scientist on duty takes a break from the data to take in the sight of the colorful plane of light that surrounds this planet, wondering what could cause those readings.
-				InSpaceLow = Close to the planet, there is no trace of the magnetodisk structure visible in the data before. Magnetic fields seem to behave fairly typically, if at an extreme intensity that threatens to wipe your cmoputers.
+				InSpaceHigh = Magnetic field readings are off the charts! The field lines appear confined into a flat disk, as though supported by a thin sheet of highly energized plasma. Befuddled, the scientist on duty takes a break from the data to take in the sight of the colorful plane of light that surrounds this planet, wondering what could cause those readings.
+				InSpaceLow = Close to the planet, there is no trace of the magnetodisk structure visible in the data before. Magnetic fields seem to behave fairly typically, if at an extreme intensity that threatens to wipe your computers clean.
 			}
 		}
 	}
