--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Bil.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Bil.cfg
@@ -11,6 +11,19 @@
 				InSpaceHigh = They say a perfect landing only comes once in a blue moon. Well, there's one right here, so it must have a good place to touch down somewhere.
 				
 				InSpaceLow = You scout out a good landing spot, wondering if it'll finally put to rest the debate over Bil's resort suitability.
+				InSpaceLow = The surface seems oddly pristine - even the cratered regions seem to come up short of what you'd expect.
+				
+				SrfSplashed = As the ship begins to melt around you, you wonder how you got into this mess.
+				SrfSplashed = This is most definitely lava, and we should most definitely get out of it immediately.
+				
+				SrfLanded = The barren landscape out your window casts doubt on the idea of this moon being a hit vacation destination.
+				SrfLanded = You'd almost think the grayish-blue terrain outside was ice. However, all analysis shows it is rocky.
+				
+				SrfLandedVolcanoes = The high elevation of this volcano provides views far and wide. You can't quite keep your mind off the possibility of it erupting under you, though - best keep the engines on standby.
+				
+				SrfLandedShallowFissures = Hopefully this narrow canyon doesn't pose too much of an issue with getting off this barren rock.
+				
+				SrfLandedDeepFissures = Perhaps this moon would make a good resort world after all - these fissures may have much better views than the rest of the moon. Quieter air conditioning may be in order, though.
 			}
 		}
 	}
@@ -24,7 +37,13 @@
 			name = Bil
 			Values
 			{
-			
+				SrfSplashed = As you wonder how you are still alive, you collect a sample of the seas you swim in. Yep, that's lava alright.
+				
+				SrfLanded = The terrain on this moon appears to be rich in cobalt compounds, likely accounting for its unusual blue coloration.
+				
+				SrfLandedDeepFissures = The ground here seems to be solid basalt. After managing to drill a sample, you find it to have an unusual amount of cobalt.
+				
+				SrfLandedOldTerrain = The land here is ancient, at least compared to the norm for this moon. Sending these cobalt-rich minerals back home could teach us a lot about Bil's history.
 			}
 		}
 	}
@@ -38,7 +57,21 @@
 			name = Bil
 			Values
 			{
-			
+				InSpace = You're not sure if it's a good idea to be out here, but the sights are undeniable. Perhaps a little longer is fine.
+				InSpace = The massive volcanoes below seem capable of spewing lava all the way into orbit, or beyond. Hopefully that doesn't happen while you're above one of them.
+				
+				SrfSplashed = Having succeeded in landing on Bil, you prepare for your victory candescence.
+				SrfSplashed = Swimming in lava, it turns out, is extremely unpleasant. Getting out of the lava immediately would be a good idea.
+				
+				SrfLanded = The endless, featureless expanse of rocky landscape stretches ahead. You could probably walk for ages without finding more than just yet another hill, with only the occasional tremor felt below to tell you there's more at play here.
+				
+				SrfLandedOldTerrain = The endless, featureless expanse of rocky landscape stretches ahead. You could probably walk for ages without finding more than just yet another hill or crater, with only the occasional tremor felt below to tell you there's more at play here.
+				
+				SrfLandedShallowFissures = The forboding cliffs surrounding you stretch far into the dark sky above. Despite the large amount of open space around here, it all feels a bit claustrophobic.
+				
+				SrfLandedDeepFissures = Down at the lowest elevations reachable on Bil, the ground starts to get a bit warm underfoot, and the faint tint to the sky is more noticeable. These fissures must be where much of the tidal energy is released into the surrounding environment.
+				
+				SrfLandedVolcanoes = Being outside on an active volcano does not feel very safe. Every rumble of the ground gives the impression that it's about to blow everything on it sky-high.
 			}
 		}
 	}
@@ -52,7 +85,17 @@
 			name = Bil
 			Values
 			{
+				InSpace = Slight increases in temperature readings over what is expected from just direct and reflected starlight are detected in the space near Bil, much like the earlier anomalous readings. Perhaps this is part of the source?
 			
+				SrfLanded = Bil's surface is noticeably warmer than stellar heating alone would imply, even away from the active regions. The tidal heating of this world must be intense.
+				
+				SrfLandedVolcanoes = These volcanoes, surprisingly, are only a little hotter than the surrounding terrain. Either they're dormant, or the entire surface of this moon is ready to erupt - and it seems pretty unlikely that this isn't an active volcano.
+				
+				SrfLandedLowlands = Temperatures are above-average here. This may be a result of the lower elevation, closer to the geothermal heart of the world, but even then it's surprisingly high, like magma's about to push through and tear this whole region open.
+				
+				SrfLandedDeepFissures = The scorching hot terrain here points to extreme geologic activity, if the exposed lava nearby didn't already. It must not have had to travel far to reach the surface.
+				
+				SrfSplashed = The thermometer begins to melt, along with everything it is attached to. The temperature appears to be "very hot".
 			}
 		}
 	}
@@ -66,7 +109,10 @@
 			name = Bil
 			Values
 			{
-			
+				InSpace = You've come to be familiar with the mystery goo's ability to endure vacuum. As a result, the goo's rapidly deteriorating health and seemingly reduced ability to adapt to the local environment comes as a surprise. Hopefully it didn't die before the damaged motors could reseal the environment.
+				SrfLanded = You've come to be familiar with the mystery goo's ability to endure vacuum. As a result, the goo's rapidly deteriorating health and seemingly reduced ability to adapt to the local environment comes as a surprise. Hopefully it didn't die before the damaged motors could reseal the environment.
+				
+				SrfSplashed = When you open the sample container, you find the goo has already been forced to develop an insulating foam layer. Exposure to the lava proves too much, and the goo immediately combusts under its stored oxygen and that in the container. Looking at the charred remains, you hope this doesn't go over too badly with management.
 			}
 		}
 	}
@@ -80,7 +126,16 @@
 			name = Bil
 			Values
 			{
-			
+				InSpaceHigh = Anomalous pressure readings appear to increase ever so slightly above the baseline for this orbital altitude as Bil nears. Perhaps this is part of the source?
+				InSpaceLow = While the gradually increasing pressure isn't enough to significantly impact spaceflight, it is noticeable on the sensitive science instrument. It would appear that Bil is trying to form an atmosphere, but is unable to hold onto it and allowing the gasses to escape into surrounding space.
+				
+				SrfLanded = Pressures on the surface, while remaining too low to impact most typical operations, are still surprisingly high, and seem to suggest a distinct thermosphere of sorts below the exosphere measured from above.
+				
+				SrfLandedVolcanoes = The trace atmospheric pressure is slightly higher on these volcanoes. This suggests they contribute, but the increase is far too small for them to be the primary source.
+				
+				SrfLandedDeepFissures = Significant increases to air pressure, now multiple pascals, point towards Bil's atmosphere being generated by gasses released in the lava flows. It may even be high enough to noticeably impact near-surface spaceflight, but not by any meaningful amount.
+				
+				SrfSplashed = The gasses put out by the lava seem to account for most, but not all, of the air pressure on this supposedly vacuum world.
 			}
 		}
 	}
@@ -94,7 +149,19 @@
 			name = Bil
 			Values
 			{
-			
+				InSpaceHigh = Despite not being particularly large, Bil appears fully differentiated, and appears to have an almost entirely molten interior. Tidal heating has done a number onthis world, no doubt exacerbated by the influence of Máni
+				
+				InSpaceHighDeepFissures = Even from all the way up here, it's clear the crust is nearly nonexistant in these valleys.
+				
+				InSpaceLow = While there's not much detectable deep inside due to how fluid it is, from up close, variations in crustal thickness can be picked up on, giving more insight into the surface geology.
+				
+				InSpaceLowYoungTerrain = The sensor picks up on a particularly thin region of crust, perhaps this will become a new volcano in the near future.
+				
+				InSpaceLowLowlands = The crust here is thin, more thin than just the lower elevation can account for. It's probably not got long before it gives way entirely.
+				
+				InSpaceLowDeepFissures = Crustal thickness is so low here the sensor can't tell it's even there. Guess that's why there's so much lava.
+				
+				SrfLanded = Variations over time seem suggestive of currents in the magma below. That they can be picked up on the gravity scan at all is telling of the immense forces at play here.
 			}
 		}
 	}
@@ -108,7 +175,15 @@
 			name = Bil
 			Values
 			{
-			
+				SrfLanded = This moon has near-constant shaking, and big quakes aren't uncommon. This allows for an accurate mapping of the structure. The thin crust lies upon a deep asthenosphere, overlaying a mantle seemingly lacking the more rigid lower layers most have, and a completely molten core.
+				
+				SrfLandedVolcanoes = Tracking the tremors suggests this specific volcano isn't in danger of exploding with us on it in the near future, but it is certainly still active with gradually rising pressure in the magma chamber.
+				
+				SrfLandedOldTerrain = This region appears to presently be geologically dead, as while the seismometer picks up on an awful lot of shaking, all of it is coming from pretty far away, and the crust seems a bit thicker than the average here.
+				
+				SrfLandedLowlands = Bilquakes appear to be so constant here that they start to interfere with each other, leading to incredible strains and bizzare seismographs. This place is tearing itself apart right under our vessel! A major local resurfacing event appears inevitable.
+				
+				SrfLandedDeepFissures = Seismic activity is, while high, less than expected in these faults. It seems the crust is so thin that it offers almost no resistance to the tectonic forces, merely yielding immediately before anything can build up to generate major quakes, producing a constant low rumble of folding paper-like bedrock.
 			}
 		}
 	}
@@ -122,7 +197,14 @@
 			name = Bil
 			Values
 			{
-			
+				InSpaceHigh = The high radiation environment caused a few of the samples to glow. A lot. A really quite alarming amount, really. Perhaps it is best not to think about this too much.
+				InSpaceLow = In addition to the very bright glow from the radiation, the samples seem to be very slowly oxidizing. Most likely this is a result of the faint traces of atmosphere visible on the limb.
+				
+				SrfLanded = Particularly temperature-sensitive samples are starting to react, and some materials are gradually oxidizing. The radioactive glow also seems slightly fainter, perhaps the trace atmosphere is holding it at bay somewhat.
+				
+				SrfLandedDeepFissures = Some of the crystals shatter under the heat, while other things glow from the radiation. Particularly flammable materials appear to be smoldering, trying to ignite but lacking sufficient atmosphere to do so.
+				
+				SrfSplashed = The lava filling the rapidly melting container obscures anything that might the samples might be doing. They're probably melting, or boiling depending on the makeup.
 			}
 		}
 	}
@@ -136,7 +218,8 @@
 			name = Bil
 			Values
 			{
-			
+				InSpaceHigh = Bifröst's immense magnetosphere appears heavily distorted here, both deflected and bolstered at the same time. Curious.
+				InSpaceLow = From nearby, the cause makes itself clear: a competing magnetosphere actively generated by the molten core of Bil, and some sort of increased plasma pressure, stronger in closer proximity to the mysterious moon.
 			}
 		}
 	}
