--- a/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Ljos.cfg
+++ b/GameData/PJ2/KopernicusFiles/2_PyriSystem/IlioC_e/ScienceDefinitions/Ljos.cfg
@@ -121,15 +121,11 @@
 			name = Ljós
 			Values
 			{
-				InSpaceHigh = The goo assumes the shape of a rickety spacecraft. Curious.
-				InSpaceLow = The goo stares back at you with three... no, four eyes. It seems to want to leave this place.
+				SrfSplashed = When you open the sample container, you find the goo has already been forced to develop an insulating foam layer. Exposure to the lava proves too much, and the goo immediately combusts under its stored oxygen and that in the container. Looking at the charred remains, you hope this doesn't go over too badly with management.
 				
-				SrfSplashed = The heat immediately vaporizes the goo, which then escapes into space.
+				SrfLanded = When exposed to the hard vacuum, the goo begins to swell, and the fluids at the surface of the goo seem to be boiling. The goo is developing a hardened skin to cope, but after a a few mintues of exposure, the goo seems to be entering a dormant state as a result of a lack of oxygen to breathe.
 				
-				SrfLanded = The goo contracts into a dark, hollow sphere. Perhaps a defensive reaction?
-				SrfLanded = The goo would rather be on Máni right now.
-				
-				SrfLandedCoasts = The goo contracts into a dark sphere, then begins to boil, seemingly from the ambient heat.
+				SrfLandedCoasts = When exposed to the heat and vacuum, the goo begins to swell, and the fluids at the surface of the goo begin vigorously boiling. The goo is developing a hardened skin to cope, but it doesn't seem to be sufficient here, as its surface is gradually charring and burning. It seems to be developing a foam-like insulation, but it would be wise to restore a safe environment before it dies.
 			}
 		}
 	}
@@ -171,6 +167,8 @@
 				InSpaceLowSeas = Gravity variations seem to suggest a submarine topography dominated by sharp ridges and valleys. Too bad its exploration would be nigh-impossible.
 				
 				SrfLanded = The large mountains distort your readings, and the gravity of Bifröst can easily be picked up on. Some more careful analysis shows the gravity of Máni as well.
+				
+				SrfSplashed = This definitely voids the warranty, good job frying the sensitive instrumentation.
 			}
 		}
 	}
