--- a/GameData/PJ2/LoadingScreens/Sigma88LoadingScreens.cfg
+++ b/GameData/PJ2/LoadingScreens/Sigma88LoadingScreens.cfg
@@ -1,12 +1,12 @@
 Sigma88LoadingScreens
 {
-	removeStockScreens = True
+	removeStockScreens = False
 	
 	removeStockTips = True
 	
-	folder = WhirligigWorld/LoadingScreens/Screens
+	//folder = WhirligigWorld/LoadingScreens/Screens
 	
-	tipsFile = WhirligigWorld/LoadingScreens/tips.txt
+	tipsFile = PJ2/LoadingScreens/tips.txt
 	
-	logoScreen = WhirligigWorld/LoadingScreens/Screens/Gregrox_Cover.dds
+	//logoScreen = WhirligigWorld/LoadingScreens/Screens/Gregrox_Cover.dds
 }
